--- a/SurveySystem/appsettings.json
+++ b/SurveySystem/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "FileConfigurations": {
+    "Size": 15000000,
+    "WordExtensions": ".docx",
+    "PdfExtensions": ".pdf",
+    "ImageExtensions": ".jpg,.jpeg,.png,.gif,.bmp,.tiff,.tif",
+    "VideoExtensions": ".mp4,.avi,.mov,.wmv,.flv,.mkv,.webm"
+  },
+  "StoragePath": "./UploadedFiles",
   "ConnectionStrings": {
     "DefaultConnection": "Server=192.168.1.13; User Id=sa; Password=!@#123Aa; Database=SurevyDB; TrustServerCertificate=True; Encrypt=False;"
   },
@@ -14,9 +22,9 @@
   },
   "AllowedHosts": "*",
 
-  "AllowedFileExtenstions": [
-    ".pdf",
-    ".jpg",
-    ".png"
-  ]
+  //"AllowedFileExtenstions": [
+  //  ".pdf",
+  //  ".jpg",
+  //  ".png"
+  //]
 }
