File upload service update

--- a/SurveySystem/appsettings.json
+++ b/SurveySystem/appsettings.json
@@ -20,11 +20,6 @@
     "Key": "enmsdfjkweropixcvnaskjhdiutrqwmvxjkhiohwerlnscxzggreqtgdf",
     "DurationInMinutes": 20
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
 
-  //"AllowedFileExtenstions": [
-  //  ".pdf",
-  //  ".jpg",
-  //  ".png"
-  //]
 }
