--- a/SurveySystem/appsettings.json
+++ b/SurveySystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "FileConfigurations": {
-    "Size": 15000000,
+    "Size": 15000000, //15 MB
     "WordExtensions": ".docx",
     "PdfExtensions": ".pdf",
     "ImageExtensions": ".jpg,.jpeg,.png,.gif,.bmp,.tiff,.tif",
