--- a/SurveySystem/SurveySystem.API.csproj
+++ b/SurveySystem/SurveySystem.API.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Survey.Infrastructure\Survey.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UploadedFiles\" />
+  </ItemGroup>
+
 </Project>
